@@ -1,9 +1,11 @@
 {
 	"title": "PTT Radio",
 	"url": "http://pttradio.net/",
-    "channel": [
-        "title": "PTT Radio",
-        "type": "mp3",
-        "url": "http://cast.ptt.cc:8000/yes"
-    ]
+	"channel": [
+		{
+			"title": "PTT Radio",
+			"type": "mp3",
+			"url": "http://cast.ptt.cc:8000/yes"
+		}
+	]
 }
